--- a/lang/cn/faq/index.html
+++ b/lang/cn/faq/index.html
@@ -206,11 +206,26 @@
 			</header>
 
 			<section class="w-full flex flex-col items-center pt-20 space-y-14 text-md xl:text-lg md:transition md:duration-[1200ms] md:ease-out md:opacity-30 transform md:-translate-x-5" data-replace='{"md:opacity-30": "md:opacity-100", "md:-translate-x-5": "md:translate-x-0"}'>
+
+				<!-- search bar -->
+				<div class="px-10 xl:px-0 w-screen xl:w-auto flex justify-center">
+					<!-- reset complete -->
+					<form class="search-bar flex text-gray-700 dark:text-gray-300 items-center px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border-2 border-gray-500 dark:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-500">
+						<!-- search field -->
+						<input class="bg-transparent outline-none w-[100%] xl:w-[63rem] min-h-[4.5rem]  transition-colors duration-1000 peer" type="text" name="search" placeholder="搜索...">
+	
+						<!-- search icon -->
+						<svg class="search-icon h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+							<path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
+						</svg>
+					</form>
+				</div>
+
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">是否有详细的指南，以便我可以遵循？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">是否有详细的指南，以便我可以遵循?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -229,8 +244,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">键盘映射说明</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">键盘映射说明</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -296,8 +311,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">什么是PlayCover的捐赠版本？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">什么是PlayCover的捐赠版本?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -314,8 +329,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">下一个版本的Playcover何时发布？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">下一个版本的Playcover何时发布?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -332,8 +347,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我是否必须禁用SIP（系统完整性保护），这样做是否安全？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我是否必须禁用SIP（系统完整性保护），这样做是否安全?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -350,8 +365,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我怎样才能更改原神的设置？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我怎样才能更改原神的设置?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -368,8 +383,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我应该如何添加鼠标左键或右键映射？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我应该如何添加鼠标左键或右键映射?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -386,8 +401,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">视角在游戏中的移动不正常？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">视角在游戏中的移动不正常?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -407,8 +422,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我已经按照视频中的所有步骤正确操作了，但我的键位绑定仍然不工作？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我已经按照视频中的所有步骤正确操作了，但我的键位绑定仍然不工作?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -425,8 +440,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">即使我做了所有的步骤都正确，PlayCover还是不工作（甚至故障排除说我的系统是正确的）？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">即使我做了所有的步骤都正确，PlayCover还是不工作（甚至故障排除说我的系统是正确的）?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -443,8 +458,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">每次发布PlayCover，我都要重新安装原神吗？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">每次发布PlayCover，我都要重新安装原神吗?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -461,8 +476,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我如何重设「sudo nvram boot-args…」命令？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我如何重设「sudo nvram boot-args…」命令?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -481,8 +496,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">为什么我在重启或打开Mac时看到一大串代码？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">为什么我在重启或打开Mac时看到一大串代码?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -505,8 +520,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">当我的密码为空时，我不能禁用SIP，也不能添加启动参数吗？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">当我的密码为空时，我不能禁用SIP，也不能添加启动参数吗?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -523,8 +538,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我得到了『此应用程序不支持在此Mac上』的错误？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我得到了『此应用程序不支持在此Mac上』的错误?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -541,8 +556,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我遇到了『你没有权限』的错误？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我遇到了『你没有权限』的错误?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -577,8 +592,8 @@
 				<!-- copy - question/answer -->
 				<div class="question flex flex-col items-center space-y-6 xl:space-y-8 px-10 xl:px-0 w-screen xl:w-auto">
 					<!-- question -->
-					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
-						<p class="w-[63vw] md:w-[75vw] xl:max-w-[61rem] pl-2 pr-4 py-5">我的键盘映射在原神中表现得很奇怪，重新启动应用程序和Mac也没有帮助？</p>
+					<div class="activator text-gray-700 dark:text-gray-300 flex items-center justify-between px-8 w-[83vw] xl:w-[63rem] min-h-[4.5rem] font-semibold rounded-full border border-transparent lg:hover:border-gray-500 lg:dark:hover:border-pastel-pink  bg-gray-50 dark:bg-[#1d1d1d] shadow transition duration-200 cursor-pointer">
+						<p class="w-[100%] xl:w-[63rem] pl-2 pr-4 py-5">我的键盘映射在原神中表现得很奇怪，重新启动应用程序和Mac也没有帮助?</p>
 
 						<!-- arrow icon -->
 						<span>
@@ -737,6 +752,7 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse dark:border-pastel-pink"></div>
 
 		<!-- js -->
+		<script src="/js/faq-search.js"></script>
 		<script src="/js/load-transitions.js"></script>
 		<script src="/js/language-button.js"></script>
 		<script src="/js/download-link.js"></script>
